gcc/testsuite/gfortran.dg/pr71730.f90
! { dg-do compile }
subroutine foo
  implicit none
  character(len=bar) :: a ! { dg-error "Scalar INTEGER expression" }
end subroutine foo
